documentation/app/styles/app.scss
/**
 * Copyright (c) HashiCorp, Inc.
 */
@use "consul-ui-toolkit";
@use "@hashicorp/design-system-components";
@import "./components/list-item";
@import "./components/component-api";
@import "./components/page-header";
@import "./components/preview-block";
@import "./components/in-page-nav";
@import "./pages/list";
@import "./pages/list-item";
@import "./pages/list-item-template";

*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  height: 100%;
  margin: 0;
  padding: 0;
  font-size: var(--token-typography-display-200-font-size);
  font-weight: var(--token-typography-font-weight-regular);
  line-height: var(--token-typography-display-200-line-height);
  font-family: var(--token-typography-font-stack-text);
  color: var(--token-color-foreground-strong);
  text-rendering: optimizelegibility;
  text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

body {
  min-height: 100vh;
  margin: 0;
  padding: 0;
}

h1 {
  font-size: var(--token-typography-display-500-font-size);
  line-height: var(--token-typography-display-500-line-height);
  font-weight: var(--token-typography-font-weight-bold);
}

h2 {
  margin-top: 3rem;
  font-size: var(--token-typography-display-400-font-size);
  line-height: var(--token-typography-display-400-line-height);
  font-weight: var(--token-typography-font-weight-bold);
}

h3 {
  margin-top: 2rem;
  font-size: var(--token-typography-display-300-font-size);
  font-weight: var(--token-typography-font-weight-bold);
  line-height: var(--token-typography-display-300-line-height);
}

h4 {
  font-size: var(--token-typography-body-200-font-size);
  font-weight: var(--token-typography-font-weight-semibold);
  line-height: var(--token-typography-code-300-line-height);
}

strong {
  font-weight: var(--token-typography-font-weight-semibold);
}

small {
  font-weight: var(--token-typography-font-weight-regular);
  font-size: var(--token-typography-display-100-font-size);
  line-height: var(--token-typography-display-100-line-height);
  color: var(--token-color-foreground-faint);

  strong {
    font-size: var(--token-typography-display-100-font-size);
    font-weight: var(--token-typography-font-weight-semibold);
  }
}

code,
pre {
  font-family: var(--token-typography-font-stack-code);
}

li {
  line-height: var(--token-typography-display-200-line-height);
}

.application {
  display: grid;
  height: 100vh;
  grid-template: "nav container" 1fr "nav footer" auto / 280px auto;

  > .hds-side-nav {
    grid-area: nav;
    position: fixed;
    top: 0;
    left: 0;
    width: 280px;
  }

  > main {
    grid-area: container;
    display: flex;
    flex-direction: column;
    padding: 2.5rem;
    align-items: start;
    max-width: 1162px;

    > .hds-tabs {
      width: 100%;
    }

    /* stylelint-disable selector-class-pattern -- Using hds classes */
    .content,
    .hds-tabs__panel {
      margin-top: 2rem;

      h2:first-of-type {
        margin-top: 0;
      }
    }
    /* stylelint-enable selector-class-pattern */

    .hds-alert {
      margin-bottom: 2.5rem;
    }
  }

  > footer {
    grid-area: footer;

    > nav {
      display: flex;
      padding: 1rem 2.5rem;
      height: 60px;
      width: 100%;
      justify-content: space-between;
      align-items: center;

      > ul {
        display: flex;
        flex-direction: row;
        gap: 1rem;
        padding: 0;
        list-style: none;

        a {
          color: var(--token-color-foreground-faint);
          font-size: var(--token-typography-display-100-font-size);
          text-decoration: none;
        }
      }
    }
  }

  .doc-page {
    display: flex;
    justify-content: space-between;

    .doc-page-content {
      max-width: 800px;
      flex-grow: 1;

      img {
        max-width: 100%;
      }

      .flex-images {
        display: flex;
        align-items: start;
        justify-content: stretch;
        flex-wrap: wrap;
        gap: 1.5rem;
      }
    }
  }

  .code-toolbar {
    width: 100%;
  }
}

